cmake_minimum_required(VERSION 3.9)
project(HDU)

set(CMAKE_CXX_STANDARD 11)

add_executable(HDU main.cpp HDU1243.cpp LCS.cpp HDU1012.cpp HDU1011.cpp HDU1231.cpp HDU1014.cpp HDU1015.cpp HDU1017.cpp HDU1018.cpp HDU1019.cpp HDU1021.cpp HDU1022.cpp HDU1020.cpp HDU1028.cpp HDU1166.cpp HDU1556.cpp HDU1698.cpp HDU1029.cpp HDU1027.cpp HDU1030.cpp HDU1542.cpp HDU1255.cpp HDU1031.cpp HDU1032.cpp HDU1034.cpp HDU1041.cpp  HDU1097.cpp HDU1754.cpp CF470_C.cpp HDU2045.cpp HDU2047.cpp HDU2048.cpp HDU2049.cpp HDU2050.cpp HDU1143.cpp practice13/A.cpp practice13/B.cpp practice13/C.cpp  Month1/F.cpp HDU1035.cpp HDU1226.cpp HDU1025.cpp HDU1312.cpp)

project(Test)
add_executable(Test Test.cpp)


project(Match2018_4)
add_executable(Match2018_4 Match2018_4/G.cpp Match2018_4/Test.cpp)


project(Match2018_5)
add_executable(Match2018_5 Match2018_5/F.cpp Match2018_5/A.cpp Match2018_5/H.cpp Match2018_5/B.cpp Match2018_5/G.cpp Match2018_5/E.cpp)

project(Wannafly10)
add_executable(Wannafly10 Wannafly10/B.cpp Wannafly10/C.cpp)

project(Wannafly_JL1)
add_executable(Wannafly_JL1 Wannafly_JL1/A.cpp Wannafly_JL1/B.cpp)


project(Wannafly_11)
add_executable(Wannafly_11  Wannafly_11/B.cpp)

project(POJ)
add_executable(POJ POJ1159.cpp POJ2528.cpp POJ3280.cpp POJ1141.cpp POJ3903.cpp POJ1952.cpp POJ1970.cpp POJ2774.cpp)

project(Template)
add_executable(Template Template/LIS.cpp Template/Qpow.cpp Template/gcd.cpp Template/Inverse.cpp Template/exgcd.cpp)

project(LG)
add_executable(LG P1025.cpp P1192.cpp P1057.cpp P1182.cpp P1316.cpp P1003.cpp P1090.cpp P1067.cpp P1540.cpp P1059.cpp P1094.cpp)

project(mock_round)
add_executable(mock_round a B.cpp D.cpp G.cpp H.cpp I.cpp)
project(lq)
add_executable(lq LQ/p1.cpp LQ/p2.cpp LQ/p3.cpp LQ/p4.cpp LQ/p5.cpp LQ/p6.cpp LQ/P7.cpp LQ/P8.cpp LQ/P9.cpp LQ/P10.cpp)
