cmake_minimum_required(VERSION 3.9)
project(HDU)

set(CMAKE_CXX_STANDARD 11)

add_executable(HDU HDU/HDU1243.cpp HDU/HDU1012.cpp HDU/HDU1231.cpp HDU/HDU1014.cpp HDU/HDU1015.cpp HDU/HDU1017.cpp HDU/HDU1018.cpp HDU/HDU1019.cpp HDU/HDU1021.cpp HDU/HDU1022.cpp HDU/HDU1020.cpp HDU/HDU1028.cpp HDU/HDU1166.cpp HDU/HDU1556.cpp HDU/HDU1698.cpp HDU/HDU1029.cpp HDU/HDU1027.cpp HDU/HDU1030.cpp HDU/HDU1542.cpp HDU/HDU1255.cpp HDU/HDU1031.cpp HDU/HDU1032.cpp HDU/HDU1034.cpp HDU/HDU1041.cpp HDU/HDU1097.cpp HDU/HDU1754.cpp HDU/HDU2045.cpp HDU/HDU2047.cpp HDU/HDU2048.cpp HDU/HDU2049.cpp HDU/HDU2050.cpp HDU/HDU1143.cpp HDU/HDU1035.cpp HDU/HDU1226.cpp HDU/HDU1025.cpp HDU/HDU1312.cpp)

project(Test)
add_executable(Test Test.cpp)

project(Match2018_4)
add_executable(Match2018_4 Match2018_4/G.cpp Match2018_4/Test.cpp)


project(Match2018_5)
add_executable(Match2018_5 Match2018_5/F.cpp Match2018_5/A.cpp Match2018_5/H.cpp Match2018_5/B.cpp Match2018_5/G.cpp Match2018_5/E.cpp)

project(Wannafly10)
add_executable(Wannafly10 Wannafly10/B.cpp Wannafly10/C.cpp)

project(Wannafly_JL1)
add_executable(Wannafly_JL1 Wannafly_JL1/A.cpp Wannafly_JL1/B.cpp)


project(Wannafly_11)
add_executable(Wannafly_11 Wannafly_11/B.cpp)

project(POJ)
add_executable(POJ POJ/POJ1159.cpp POJ/POJ2528.cpp POJ/POJ3280.cpp POJ/POJ1141.cpp POJ/POJ3903.cpp POJ/POJ1952.cpp POJ/POJ1970.cpp POJ/POJ2774.cpp)

project(Template)
add_executable(Template Template/LIS.cpp Template/Qpow.cpp Template/gcd.cpp Template/Inverse.cpp Template/exgcd.cpp)

project(LG)
add_executable(LG LG/P1025.cpp LG/P1192.cpp LG/P1057.cpp LG/P1182.cpp LG/P1316.cpp LG/P1003.cpp LG/P1090.cpp LG/P1067.cpp LG/P1540.cpp LG/P1059.cpp LG/P1803.cpp LG/P1094.cpp LG/P1219.cpp LG/P1019.cpp)

project(other)
add_executable(other other/LCS.cpp other/B.cpp other/D.cpp other/G.cpp other/H.cpp other/I.cpp other/CF470_C.cpp)

project(lq)
add_executable(lq LQ/p1.cpp LQ/p2.cpp LQ/p3.cpp LQ/p4.cpp LQ/p5.cpp LQ/p6.cpp LQ/P7.cpp LQ/P8.cpp LQ/P9.cpp LQ/P10.cpp)

project(practice13)
add_executable(practice13 practice13/A.cpp practice13/B.cpp practice13/C.cpp)
